Should fix component overlap

--- a/client/src/components/Overview/OverviewStyles.css
+++ b/client/src/components/Overview/OverviewStyles.css
@@ -18,6 +18,7 @@ body {
   background-color: #f1f1f1;
   position:relative;
   height: 70vh;
+  min-height: 700px;
 }
 
 .image-gallery-container {
